추가하기버튼 클릭시 리스트에 정보추가 기능 구현

--- a/one.html
+++ b/one.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./deco.css">
-    <script src="./product.js" defer></script> 
+    <script src="./process.js" defer></script> 
 </head>
 <body>
     <div class="bigBox">
         <h1>개인 정보</h1>
         <div>이름 : <input type="text" value="박유진" > </div>
-        <div>주민번호 : <input type="text"  value="961204-2******" > </div>
-        <div>전화번호 : <input type="text" value="010-9392-7723" > </div>
-        <div>주소 : <input type="text" value="부산광역시 수영구 망미빌라 "> </div>
-        <button>추가하기</button>
+        <div>나이 : <input type="text"  value="28" > </div>
+        <div>직업 : <input type="text" value="백수" > </div>
+        <div>사는곳 : <input type="text" value="수영구"> </div>
+        <button id="addButton">추가하기</button>
     </div>
     <div class="bigBox">
         <h1>개인 정보 화면</h1>
