--- a/one.html
+++ b/one.html
@@ -10,10 +10,10 @@
 <body>
     <div class="bigBox">
         <h1>개인 정보</h1>
-        <div>이름 : <input type="text" value="박유진" > </div>
-        <div>나이 : <input type="text"  value="28" > </div>
-        <div>직업 : <input type="text" value="백수" > </div>
-        <div>사는곳 : <input type="text" value="수영구"> </div>
+        <div>이름 : <input id="name" type="text" value="박유진" > </div>
+        <div>나이 : <input  id="age" type="text"  value="28" > </div>
+        <div>직업 : <input  id="job" type="text" value="백수" > </div>
+        <div>사는곳 : <input id="place"  type="text" value="수영구"> </div>
         <button id="addButton">추가하기</button>
     </div>
     <div class="bigBox">
